# CodeCraft-Agent

./: .gitignore  HIGHLIGHTS.md  INTERVIEW_GUIDE.md  OPTIMIZATION_PROGRESS.md  PROGRESS.md  README.md  packages.txt  pyproject.toml  requirements.in  requirements.txt  run_web.bat  run_web.sh
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
backend/: __init__.py
backend/agents/: __init__.py  code_generator.py  code_reviewer.py  debugger.py  test_generator.py
backend/core/: __init__.py  agent.py  context.py  errors.py  logger.py  memory.py  orchestrator.py  protocol.py  state.py  vector_memory.py
backend/llm/: __init__.py  base.py  claude_llm.py  openai_llm.py  token_manager.py
backend/tools/: __init__.py  ast_parser.py  executor.py
backend/utils/: __init__.py  code_utils.py  input_validator.py
cli/: __init__.py  main.py
demos/: DEMO_GUIDE.md  demo_full_workflow.py  demo_performance.py  demo_quick_sort.py  demo_security_fix.py  run_all_demos.py
docs/assets/: architecture.md
frontend/: app.py
issues/: ISSUE-001-代码执行沙箱绕过.md  ISSUE-002-API-Key明文存储.md  ISSUE-003-exec代码注入.md  ISSUE-004-LLM输出未验证.md  ISSUE-005-日志脱敏不完整.md  ISSUE-006-依赖版本未锁定.md  ISSUE-007-输入验证不足.md  ISSUE-008-向量记忆无加密.md
tests/: __init__.py  test_agent.py  test_ast_parser.py  test_code_generator.py  test_code_reviewer.py  test_context.py  test_debugger.py  test_executor.py  test_integration.py  test_llm.py  test_memory.py  test_orchestrator.py  test_protocol.py  test_security.py  test_state.py  test_test_generator.py  test_token_manager.py  test_vector_memory.py
(+14 files in other folders)
